recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:5: error: reassignment to val
  steps = steps-1
        ^Spiral:6: error: reassignment to val
  length = length + 3
         ^